[gd_scene load_steps=2 format=3 uid="uid://cxsiarlaf5kwm"]

[ext_resource type="Script" uid="uid://dw8kcivigrqec" path="res://ui/tank_select.gd" id="1"]

[node name="TankSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
horizontal_alignment = 1
text = "Выбор команды и танка"

[node name="TeamsContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 70.0
offset_right = -50.0
offset_bottom = -120.0

[node name="Team1Panel" type="PanelContainer" parent="TeamsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Team1VBox" type="VBoxContainer" parent="TeamsContainer/Team1Panel"]
layout_mode = 2

[node name="Team1Label" type="Label" parent="TeamsContainer/Team1Panel/Team1VBox"]
layout_mode = 2
text = "Команда 1"
horizontal_alignment = 1

[node name="Team1Button" type="Button" parent="TeamsContainer/Team1Panel/Team1VBox"]
layout_mode = 2
text = "Присоединиться"

[node name="Team1Players" type="VBoxContainer" parent="TeamsContainer/Team1Panel/Team1VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="TeamsContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Team2Panel" type="PanelContainer" parent="TeamsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Team2VBox" type="VBoxContainer" parent="TeamsContainer/Team2Panel"]
layout_mode = 2

[node name="Team2Label" type="Label" parent="TeamsContainer/Team2Panel/Team2VBox"]
layout_mode = 2
text = "Команда 2"
horizontal_alignment = 1

[node name="Team2Button" type="Button" parent="TeamsContainer/Team2Panel/Team2VBox"]
layout_mode = 2
text = "Присоединиться"

[node name="Team2Players" type="VBoxContainer" parent="TeamsContainer/Team2Panel/Team2VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BottomPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -100.0
offset_right = -50.0
offset_bottom = -20.0

[node name="TankSelectPanel" type="VBoxContainer" parent="BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TankLabel" type="Label" parent="BottomPanel/TankSelectPanel"]
layout_mode = 2
text = "Выберите танк:"

[node name="TanksContainer" type="HBoxContainer" parent="BottomPanel/TankSelectPanel"]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="BottomPanel"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
text = "Готов"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
horizontal_alignment = 1
text = "Ожидание игроков..."
